# model/user.go
@@ -7,18 +7,20 @@ import (
 )
 
 type User struct {
-	Username       string
-	HashedPassword string
-	Role           string
+	Username       string `json:"username"`
+	Email          string `json:"email"`
+	HashedPassword string `json:"-"`
+	Role           string `json:"-"`
 }
 
-func NewUser(username, password, role string) (*User, error) {
+func NewUser(username, email, password, role string) (*User, error) {
 	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(password), bcrypt.DefaultCost)
 	if err != nil {
 		return nil, fmt.Errorf("cannot hash password: %w", err)
 	}
 	user := User{
 		Username:       username,
+		Email:          email,
 		HashedPassword: string(hashedPassword),
 		Role:           role,
 	}
@@ -33,6 +35,7 @@ func (user *User) IsCorrectPassword(password string) bool {
 func (user *User) Clone() *User {
 	return &User{
 		Username:       user.Username,
+		Email:          user.Email,
 		HashedPassword: user.HashedPassword,
 		Role:           user.Role,
 	}
